# automl_pipeline

./: README.md  config.json  main.py  pyproject.toml  requirements.txt  setup.bat  setup.py  test_pipeline.py
data/sample/: titanic.csv
phase_one_Technical Scope & Components/: 1_Data_Analysis_Agent.md  2_Feature_Engineering_Pipeline.md  3_multi_algorithm_Training_Engine.md  4_Production_API_Gateway.md  5_Basic_MLOps_Integration.md
phase_one_component/: 1_data_analysis_agent.py  2_feature_engineering_pipeline.py  3_multi_algorithm_training.py  4_production_api_gateway.py  5_basic_mlops_integration.py  __init__.py
src/: config.py  pipeline.py
src/agents/: data_agent.py  deployment_agent.py  feature_agent.py  model_agent.py
src/api/: main.py
src/utils/: logging_config.py
tests/: test_data_agent.py  test_feature_agent.py  test_model_agent.py
